Fix horizontal scrolling on mobile

--- a/css/home.scss
+++ b/css/home.scss
@@ -598,6 +598,7 @@ permalink: /css/homestyle.css
 
   @media (max-width: 767px) {
     padding: 3em 1.5em;
+    overflow: hidden;
   }
 }
 
